Pending changes exported from your codespace

--- a/hello_world/templates/index.html
+++ b/hello_world/templates/index.html
@@ -12,12 +12,14 @@
 <body>
     <div class="App">
         <header class="App-header">
-            <img src="{% static 'Octocat.png' %}" class="App-logo" alt="logo" />
+            <img src="{% static 'myoctocat.png' %}" class="App-logo" alt="logo" />
             <p>
+                Hello DES323 Students <br>
                 GitHub Codespaces <span class="heart">♥️</span> Django
             </p>
-            <p class="small">
-                Edit <code>hello_world/templates/index.html</code> and see changes live!
+            <p> This is 6322775122 Ploypichcha Anupatanun</p>
+            <p class ="small">
+                <b>[DES323-W02-Assignment]</b> Web and Cross-Platform Development Concepts
             </p>
         </header>
     </div>
